Web Inspector: Relative URL Link Tooltips do not respect <base> https://bugs.webkit.org/show_bug.cgi?id=43434

Reviewed by Pavel Feldman.

Source/WebCore:

New "baseURL" field added into the DOM.Node payload for document nodes and is made use of while resolving and completing URLs.

* inspector/Inspector.json:
* inspector/InspectorDOMAgent.cpp:
(WebCore::documentBaseURLString):
(WebCore):
(WebCore::InspectorDOMAgent::buildObjectForNode):
* inspector/front-end/AuditRules.js:
(WebInspector.AuditRules.ImageDimensionsRule.prototype.doRun):
(WebInspector.AuditRules.CssInHeadRule.prototype.doRun.externalStylesheetsReceived):
(WebInspector.AuditRules.StylesScriptsOrderRule.prototype.doRun.cssBeforeInlineReceived):
* inspector/front-end/DOMAgent.js:
(WebInspector.DOMNode.prototype.resolveURL):
(WebInspector.DOMDocument):

LayoutTests:

Added an iframe containing the <base> tag to test DOMNode.prototype.resolveURL() with a non-trivial baseURL.

* inspector/elements/elements-panel-rewrite-href.html:
* inspector/elements/elements-panel-rewrite-href-expected.txt:
* inspector/elements/resources/elements-panel-rewrite-href-iframe.html: Added.

Canonical link: https://commits.webkit.org/115496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129477 268f45cc-cd09-0410-ab3c-d52691b4dbfc